--- a/textproc/R-Rdpack/Makefile
+++ b/textproc/R-Rdpack/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.1 2022/12/18 06:13:31 mef Exp $
+# $NetBSD: Makefile,v 1.2 2025/01/01 22:29:10 mef Exp $
 
 R_PKGNAME=	Rdpack
-R_PKGVER=	2.4
+R_PKGVER=	2.6.2
 CATEGORIES=	textproc
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
@@ -11,6 +11,9 @@ LICENSE=	gnu-gpl-v2 OR gnu-gpl-v3
 DEPENDS+=	R-rbibutils-[0-9]*:../../textproc/R-rbibutils
 
 # Package suggested but not available: 'gbRd'
+TEST_DEPENDS+=	R-rprojroot-[0-9]*:../../devel/R-rprojroot
+TEST_DEPENDS+=	R-rstudioapi-[0-9]*:../../math/R-rstudioapi
+TEST_DEPENDS+=	R-testthat-[0-9]*:../../devel/R-testthat
 
 
 USE_LANGUAGES=	# none
