--- a/textproc/R-brew/Makefile
+++ b/textproc/R-brew/Makefile
@@ -1,12 +1,20 @@
-# $NetBSD: Makefile,v 1.2 2022/04/29 15:20:06 mef Exp $
+# $NetBSD: Makefile,v 1.3 2025/01/01 22:47:27 mef Exp $
 
 R_PKGNAME=	brew
-R_PKGVER=	1.0-7
+R_PKGVER=	1.0-10
 CATEGORIES=	textproc
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 COMMENT=	Templating framework for report generation
 LICENSE=	gnu-gpl-v2
+
+TEST_DEPENDS+=	R-testthat-[0-9]*:../../devel/R-testthat
+
+TEST_DEPENDS+=	tex-ec-[0-9]*:../../fonts/tex-ec
+TEST_DEPENDS+=	tex-inconsolata-[0-9]*:../../fonts/tex-inconsolata
+TEST_DEPENDS+=	tex-latex-bin-[0-9]*:../../print/tex-latex-bin
+TEST_DEPENDS+=	tex-url-[0-9]*:../../print/tex-url
+TEST_DEPENDS+=	tex-xkeyval-[0-9]*:../../print/tex-xkeyval
 
 USE_LANGUAGES=	# none
 
