--- a/textproc/R-commonmark/Makefile
+++ b/textproc/R-commonmark/Makefile
@@ -1,12 +1,22 @@
-# $NetBSD: Makefile,v 1.2 2023/06/03 14:04:18 mef Exp $
+# $NetBSD: Makefile,v 1.3 2025/01/01 22:58:51 mef Exp $
 
 R_PKGNAME=	commonmark
-R_PKGVER=	1.9.0
+R_PKGVER=	1.9.2
 CATEGORIES=	textproc
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 COMMENT=	High performance commonmark and Github Markdown rendering in R
 LICENSE=	2-clause-bsd
+
+TEST_DEPENDS+=	R-curl-[0-9]*:../../www/R-curl
+TEST_DEPENDS+=	R-testthat-[0-9]*:../../devel/R-testthat
+TEST_DEPENDS+=	R-xml2-[0-9]*:../../textproc/R-xml2
+
+TEST_DEPENDS+=	tex-ec-[0-9]*:../../fonts/tex-ec
+TEST_DEPENDS+=	tex-inconsolata-[0-9]*:../../fonts/tex-inconsolata
+TEST_DEPENDS+=	tex-latex-bin-[0-9]*:../../print/tex-latex-bin
+TEST_DEPENDS+=	tex-xkeyval-[0-9]*:../../print/tex-xkeyval
+TEST_DEPENDS+=	tex-url-[0-9]*:../../print/tex-url
 
 USE_LANGUAGES=	c
 
