--- a/databases/ruby-tiny_tds/Makefile
+++ b/databases/ruby-tiny_tds/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.40 2024/11/14 22:19:13 wiz Exp $
+# $NetBSD: Makefile,v 1.41 2025/01/02 05:09:31 taca Exp $
 
-DISTNAME=	tiny_tds-2.1.7
+DISTNAME=	tiny_tds-3.0.0
 PKGNAME=	${RUBY_PKGPREFIX}-${DISTNAME}
-PKGREVISION=	5
 CATEGORIES=	databases
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
