--- a/devel/ruby-reline/Makefile
+++ b/devel/ruby-reline/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.2 2024/12/09 14:09:11 taca Exp $
+# $NetBSD: Makefile,v 1.3 2025/01/02 05:26:02 taca Exp $
 
-DISTNAME=	reline-0.5.12
+DISTNAME=	reline-0.6.0
 CATEGORIES=	devel
 
 MAINTAINER=	wen@NetBSD.org
@@ -8,9 +8,10 @@ HOMEPAGE=	https://rubygems.org/gems/reline/
 COMMENT=	Alternative GNU Readline or Editline implementation by pure Ruby
 LICENSE=	2-clause-bsd OR ruby-license
 
-DEPENDS+=	${RUBY_PKGPREFIX}-io-console>=0.5:../../devel/ruby-io-console
-
 USE_LANGUAGES=	# none
+
+# Ruby 3.4.1 has reline 0.6.0 gem.
+RUBY_VERSIONS_ACCEPTED=	31 32 33
 
 .include "../../lang/ruby/gem.mk"
 .include "../../mk/bsd.pkg.mk"
