--- a/net/ruby-net-imap/Makefile
+++ b/net/ruby-net-imap/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.7 2024/12/09 15:27:03 taca Exp $
+# $NetBSD: Makefile,v 1.8 2025/01/02 05:41:25 taca Exp $
 
-DISTNAME=	net-imap-0.5.1
+DISTNAME=	net-imap-0.5.4
 CATEGORIES=	net mail
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
@@ -9,6 +9,9 @@ COMMENT=	Ruby client api for Internet Message Access Protocol
 LICENSE=	2-clause-bsd OR ruby-license
 
 USE_LANGUAGES=	# none
+
+# Ruby 3.4.1 has net-imap 0.5.4 gem.
+RUBY_VERSIONS_ACCEPTED=	31 32 33
 
 .include "../../lang/ruby/gem.mk"
 .include "../../mk/bsd.pkg.mk"
