--- a/textproc/ruby-csv/Makefile
+++ b/textproc/ruby-csv/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.16 2024/12/15 13:30:48 taca Exp $
+# $NetBSD: Makefile,v 1.17 2025/01/02 05:47:28 taca Exp $
 
-DISTNAME=	csv-3.3.1
+DISTNAME=	csv-3.3.2
 CATEGORIES=	textproc
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
@@ -10,7 +10,8 @@ LICENSE=	2-clause-bsd
 
 USE_LANGUAGES=	# none
 
-RUBY_VERSIONS_ACCEPTED=	31 32
+# Ruby 3.4.1 has irb 3.3.2 gem.
+RUBY_VERSIONS_ACCEPTED=	31 32 33
 
 .include "../../lang/ruby/gem.mk"
 .include "../../mk/bsd.pkg.mk"
