--- a/graphics/ruby-RMagick/Makefile
+++ b/graphics/ruby-RMagick/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.178 2024/11/24 06:59:08 adam Exp $
+# $NetBSD: Makefile,v 1.179 2025/01/02 06:28:30 taca Exp $
 
 DISTNAME=	rmagick-6.0.1
 PKGNAME=	${RUBY_PKGPREFIX}-${DISTNAME:S/rmagick/RMagick/}
-PKGREVISION=	8
+PKGREVISION=	9
 CATEGORIES=	graphics
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
@@ -11,13 +11,17 @@ COMMENT=	Ruby binding to ImageMagick
 LICENSE=	mit
 
 DEPENDS+=	${RUBY_PKGPREFIX}-pkg-config>=1.4<2:../../devel/ruby-pkg-config
-DEPENDS+=	${RUBY_PKGPREFIX}-observer>=0.1<1:../../devel/ruby-observer
 
 USE_GCC_RUNTIME=	yes
 USE_LANGUAGES=		c c++
 FORCE_C_STD=		c99
 
 BUILDLINK_TRANSFORM.Darwin+=	rm:-Wl,--no-as-needed
+
+.include "../../lang/ruby/rubyversion.mk"
+.if ${RUBY_VER} < 33
+DEPENDS+=	${RUBY_PKGPREFIX}-observer>=0.1<1:../../devel/ruby-observer
+.endif
 
 .include "../../devel/ruby-pkg-config/tool.mk"
 .include "../../lang/ruby/gem.mk"
