--- a/lang/ruby33/Makefile
+++ b/lang/ruby33/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.4 2024/07/13 15:25:25 taca Exp $
+# $NetBSD: Makefile,v 1.5 2025/01/02 06:31:58 taca Exp $
 
 DISTNAME=	${RUBY_DISTNAME}
-PKGNAME=	${RUBY_PKGPREFIX}-${RUBY_VERSION:S/-rc/rc/}
+PKGNAME=	${RUBY_PKGPREFIX}-${RUBY_VERSION}
 CATEGORIES=	lang ruby
 MASTER_SITES=	${MASTER_SITE_RUBY}
 
