--- a/security/ruby-securerandom/Makefile
+++ b/security/ruby-securerandom/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.4 2024/12/16 09:09:11 taca Exp $
+# $NetBSD: Makefile,v 1.5 2025/01/02 06:33:48 taca Exp $
 
 DISTNAME=	securerandom-0.4.1
 CATEGORIES=	security
@@ -9,6 +9,9 @@ COMMENT=	Interface for secure random number generator
 LICENSE=	2-clause-bsd
 
 USE_LANGUAGES=	# none
+
+# Ruby 3.4.1 has securerandom 0.4.1 gem.
+RUBY_VERSIONS_ACCEPTED=	31 32 33
 
 .include "../../lang/ruby/gem.mk"
 .include "../../mk/bsd.pkg.mk"
