--- a/time/ruby-timeout/Makefile
+++ b/time/ruby-timeout/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.2 2024/12/16 09:06:59 taca Exp $
+# $NetBSD: Makefile,v 1.3 2025/01/02 06:35:29 taca Exp $
 
 DISTNAME=	timeout-0.4.3
 CATEGORIES=	time
@@ -9,6 +9,9 @@ COMMENT=	Auto-terminate potentially long-running operations in Ruby
 LICENSE=	2-clause-bsd OR ruby-license
 
 USE_LANGUAGES=	# none
+
+# Ruby 3.4.1 has timeout 0.4.3 gem.
+RUBY_VERSIONS_ACCEPTED=	31 32 33
 
 .include "../../lang/ruby/gem.mk"
 .include "../../mk/bsd.pkg.mk"
