--- a/www/ruby-uri/Makefile
+++ b/www/ruby-uri/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.4 2024/12/11 15:43:58 taca Exp $
+# $NetBSD: Makefile,v 1.5 2025/01/02 06:36:12 taca Exp $
 
 DISTNAME=	uri-1.0.2
 CATEGORIES=	www
@@ -9,6 +9,9 @@ COMMENT=	Providing classes to handle Uniform Resource Identifiers
 LICENSE=	2-clause-bsd OR ruby-license
 
 USE_LANGUAGES=	# none
+
+# Ruby 3.4.1 has uri 1.0.2 gem.
+RUBY_VERSIONS_ACCEPTED=	31 32 33
 
 .include "../../lang/ruby/gem.mk"
 .include "../../mk/bsd.pkg.mk"
