--- a/devel/Makefile
+++ b/devel/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.4376 2024/12/26 13:55:04 adam Exp $
+# $NetBSD: Makefile,v 1.4377 2025/01/02 07:03:18 taca Exp $
 #
 
 COMMENT=	Development utilities
@@ -3272,6 +3272,7 @@ SUBDIR+=	ruby-activesupport61
 SUBDIR+=	ruby-activesupport70
 SUBDIR+=	ruby-activesupport71
 SUBDIR+=	ruby-activesupport72
+SUBDIR+=	ruby-activesupport80
 SUBDIR+=	ruby-algorithms
 SUBDIR+=	ruby-amstd
 SUBDIR+=	ruby-approvaltests
