--- a/www/Makefile
+++ b/www/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1830 2024/12/13 17:05:15 taca Exp $
+# $NetBSD: Makefile,v 1.1831 2025/01/02 07:10:06 taca Exp $
 #
 
 COMMENT=	Packages related to the World Wide Web
@@ -975,6 +975,7 @@ SUBDIR+=	ruby-actionview61
 SUBDIR+=	ruby-actionview70
 SUBDIR+=	ruby-actionview71
 SUBDIR+=	ruby-actionview72
+SUBDIR+=	ruby-actionview80
 SUBDIR+=	ruby-aws-eventstream
 SUBDIR+=	ruby-aws-partitions
 SUBDIR+=	ruby-aws-sdk-core
