--- a/mail/p5-Mail-DKIM/Makefile
+++ b/mail/p5-Mail-DKIM/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.59 2024/11/16 12:05:51 wiz Exp $
+# $NetBSD: Makefile,v 1.60 2025/01/02 08:16:35 wen Exp $
 
-DISTNAME=		Mail-DKIM-1.20240619
+DISTNAME=		Mail-DKIM-1.20240923
 PKGNAME=		p5-${DISTNAME}
-PKGREVISION=		1
 CATEGORIES=		mail perl5
 MASTER_SITES=		${MASTER_SITE_PERL_CPAN:=Mail/}
 
