--- a/devel/py-scard/Makefile
+++ b/devel/py-scard/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.12 2024/11/11 07:28:23 wiz Exp $
+# $NetBSD: Makefile,v 1.13 2025/01/02 09:58:45 adam Exp $
 
-DISTNAME=	pyscard-2.1.1
+DISTNAME=	pyscard-2.2.0
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME:C/^py//}
 CATEGORIES=	devel python
 MASTER_SITES=	${MASTER_SITE_PYPI:=p/pyscard/}
