--- a/audio/py-discogs-client/Makefile
+++ b/audio/py-discogs-client/Makefile
@@ -1,23 +1,21 @@
-# $NetBSD: Makefile,v 1.3 2022/01/04 20:52:33 wiz Exp $
+# $NetBSD: Makefile,v 1.4 2025/01/02 10:44:20 adam Exp $
 
-DISTNAME=	discogs-client-2.3.0
-PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
-PKGREVISION=	1
+DISTNAME=	python3_discogs_client-2.7.1
+PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/python3_//:S/_/-/}
 CATEGORIES=	audio python
-MASTER_SITES=	${MASTER_SITE_PYPI:=d/discogs-client/}
+MASTER_SITES=	${MASTER_SITE_PYPI:=p/python3-discogs-client/}
 
-MAINTAINER=	pkgsrc_users@NetBSD.org
-HOMEPAGE=	https://github.com/discogs/discogs_client
+MAINTAINER=	pkgsrc-users@NetBSD.org
+HOMEPAGE=	https://github.com/joalla/discogs_client
 COMMENT=	Python Client for the Discogs API
 LICENSE=	modified-bsd
 
+TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools-[0-9]*:../../devel/py-setuptools
+DEPENDS+=	${PYPKGPREFIX}-dateutil-[0-9]*:../../time/py-dateutil
 DEPENDS+=	${PYPKGPREFIX}-oauthlib-[0-9]*:../../security/py-oauthlib
 DEPENDS+=	${PYPKGPREFIX}-requests-[0-9]*:../../devel/py-requests
-DEPENDS+=	${PYPKGPREFIX}-six-[0-9]*:../../lang/py-six
 
 USE_LANGUAGES=	# none
 
-PYTHON_VERSIONS_INCOMPATIBLE=	27 # py-oauthlib
-
-.include "../../lang/python/egg.mk"
+.include "../../lang/python/wheel.mk"
 .include "../../mk/bsd.pkg.mk"
