--- a/devel/py-pebble/Makefile
+++ b/devel/py-pebble/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.15 2024/11/11 07:28:18 wiz Exp $
+# $NetBSD: Makefile,v 1.16 2025/01/02 10:48:04 adam Exp $
 
-DISTNAME=	Pebble-5.0.7
+DISTNAME=	Pebble-5.1.0
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME:tl}
 CATEGORIES=	devel python
 MASTER_SITES=	${MASTER_SITE_PYPI:=P/Pebble/}
@@ -13,8 +13,6 @@ LICENSE=	gnu-lgpl-v3
 TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools-[0-9]*:../../devel/py-setuptools
 
 USE_LANGUAGES=	# none
-
-PYTHON_VERSIONS_INCOMPATIBLE=	27
 
 .include "../../lang/python/wheel.mk"
 .include "../../mk/bsd.pkg.mk"
