--- a/textproc/R-highr/Makefile
+++ b/textproc/R-highr/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.9 2023/06/03 13:58:21 mef Exp $
+# $NetBSD: Makefile,v 1.10 2025/01/02 11:56:16 mef Exp $
 
 R_PKGNAME=	highr
-R_PKGVER=	0.10
+R_PKGVER=	0.11
 CATEGORIES=	textproc
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
@@ -12,6 +12,13 @@ DEPENDS+=	R-xfun-[0-9]*:../../devel/R-xfun
 
 TEST_DEPENDS+=	R-knitr-[0-9]*:../../print/R-knitr
 TEST_DEPENDS+=	R-markdown-[0-9]*:../../textproc/R-markdown
+TEST_DEPENDS+=	R-testit-[0-9]*:../../devel/R-testit
+
+TEST_DEPENDS+=	tex-ec-[0-9]*:../../fonts/tex-ec
+TEST_DEPENDS+=	tex-inconsolata-[0-9]*:../../fonts/tex-inconsolata
+TEST_DEPENDS+=	tex-latex-bin-[0-9]*:../../print/tex-latex-bin
+TEST_DEPENDS+=	tex-url-[0-9]*:../../print/tex-url
+TEST_DEPENDS+=	tex-xkeyval-[0-9]*:../../print/tex-xkeyval
 
 USE_LANGUAGES=	# none
 
