--- a/textproc/R-htmlTable/Makefile
+++ b/textproc/R-htmlTable/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.3 2021/09/08 11:15:48 mef Exp $
+# $NetBSD: Makefile,v 1.4 2025/01/02 12:55:27 mef Exp $
 
 R_PKGNAME=	htmlTable
-R_PKGVER=	2.2.1
+R_PKGVER=	2.4.3
 CATEGORIES=	textproc
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
@@ -27,6 +27,13 @@ TEST_DEPENDS+=	R-tibble-[0-9]*:../../math/R-tibble
 TEST_DEPENDS+=	R-tidyselect-[0-9]*:../../devel/R-tidyselect
 TEST_DEPENDS+=	R-tidyr-[0-9]*:../../math/R-tidyr
 TEST_DEPENDS+=	R-dplyr-[0-9]*:../../math/R-dplyr
+TEST_DEPENDS+=	R-lubridate-[0-9]*:../../time/R-lubridate
+
+TEST_DEPENDS+=	tex-ec-[0-9]*:../../fonts/tex-ec
+TEST_DEPENDS+=	tex-inconsolata-[0-9]*:../../fonts/tex-inconsolata
+TEST_DEPENDS+=	tex-latex-bin-[0-9]*:../../print/tex-latex-bin
+TEST_DEPENDS+=	tex-url-[0-9]*:../../print/tex-url
+TEST_DEPENDS+=	tex-xkeyval-[0-9]*:../../print/tex-xkeyval
 
 USE_LANGUAGES=	# none
 
