--- a/textproc/R-hunspell/Makefile
+++ b/textproc/R-hunspell/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.3 2023/06/11 10:43:31 mef Exp $
+# $NetBSD: Makefile,v 1.4 2025/01/02 13:30:46 mef Exp $
 
 R_PKGNAME=	hunspell
-R_PKGVER=	3.0.2
+R_PKGVER=	3.0.5
 CATEGORIES=	textproc
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
@@ -15,6 +15,12 @@ DEPENDS+=	R-digest>=0.6.20:../../security/R-digest
 TEST_DEPENDS+=	R-spelling-[0-9]*:../../textproc/R-spelling
 TEST_DEPENDS+=	R-testthat-[0-9]*:../../devel/R-testthat
 TEST_DEPENDS+=	R-rmarkdown-[0-9]*:../../textproc/R-rmarkdown
+
+TEST_DEPENDS+=	tex-ec-[0-9]*:../../fonts/tex-ec
+TEST_DEPENDS+=	tex-inconsolata-[0-9]*:../../fonts/tex-inconsolata
+TEST_DEPENDS+=	tex-latex-bin-[0-9]*:../../print/tex-latex-bin
+TEST_DEPENDS+=	tex-url-[0-9]*:../../print/tex-url
+TEST_DEPENDS+=	tex-xkeyval-[0-9]*:../../print/tex-xkeyval
 
 USE_LANGUAGES=	c c++
 
