--- a/math/py-scipy/Makefile
+++ b/math/py-scipy/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.86 2024/10/14 06:45:51 wiz Exp $
+# $NetBSD: Makefile,v 1.87 2025/01/05 08:58:47 adam Exp $
 
-DISTNAME=	scipy-1.14.1
+DISTNAME=	scipy-1.15.0
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
 CATEGORIES=	math python
 MASTER_SITES=	${MASTER_SITE_PYPI:=s/scipy/}
@@ -29,7 +29,7 @@ USE_CXX_FEATURES=	c++17
 USE_LANGUAGES=		c c++ fortran
 USE_TOOLS+=		pkg-config
 MAKE_ENV+=		ATLAS=None
-GCC_REQD+=		9
+GCC_REQD+=		14
 
 SUBST_CLASSES+=		f2py
 SUBST_STAGE.f2py=	pre-configure
