--- a/devel/p5-Test-Warnings/Makefile
+++ b/devel/p5-Test-Warnings/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.31 2025/01/05 09:07:03 wiz Exp $
+# $NetBSD: Makefile,v 1.32 2025/01/05 09:09:34 wiz Exp $
 
 DISTNAME=	Test-Warnings-0.036
 PKGNAME=	p5-${DISTNAME}
@@ -11,6 +11,7 @@ COMMENT=	Test for warnings and the lack of them
 LICENSE=	${PERL5_LICENSE}
 
 TOOL_DEPENDS=	p5-CPAN-Meta-Check>=0.007:../../devel/p5-CPAN-Meta-Check
+DEPENDS=	p5-Import-Into>=0:../../devel/p5-Import-Into
 
 PERL5_PACKLIST=		auto/Test/Warnings/.packlist
 
